--- a/index.html
+++ b/index.html
@@ -48,6 +48,18 @@
     </section>
 
     <!-- Skills section -->
+    <section class="programmingLanguages-section">
+      <h2>Programming Languages</h2>
+      <div class="skills-list">
+        <span class="skill-badge">Using Generative AI</span>
+        <span class="skill-badge">Web Dev</span>
+        <span class="skill-badge">Java</span>
+        <span class="skill-badge">Python</span>
+        <span class="skill-badge">Matlab</span>
+      </div>
+    </section>
+
+    <!-- Skills section -->
     <section class="skills-section">
       <h2>Skills</h2>
       <p>Here are a few of the skills I have:</p>
