--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Profile image in a circle -->
     <img src="img/profile.jpg" alt="Profile Image" class="profile-img">
     <h1>Payaswini</h1>
-    <p class="subtitle"> Hello World! Welcome to my personal website. </p>
+    <p class="subtitle">  </p>
   </header>
 
   <!-- Main content area -->
@@ -26,7 +26,7 @@
       <div class="aboutme-text">
         <h2>About Me</h2>
         <p>
-          Welcome to PayaSpace! I'm Payaswini, an undergraduate student at the Ohio State University studying computer science and engineering. I strive to become a software developer primarily in the video game or graphics engineering industry.
+         Hello! My name is Payaswini Gurung. I am an undergraduate student at the Ohio State University studying computer science and engineering. I strive to become a Software Developer primarily in the video game or graphics engineering industry. I also have an interest in Front-End Developmet and UI/UX Design.
         </p>
       </div>
 
@@ -51,31 +51,30 @@
     <section class="programmingLanguages-section">
       <h2>Programming Languages</h2>
       <div class="skills-list">
-        <span class="skill-badge">Using Generative AI</span>
-        <span class="skill-badge">Web Dev</span>
+        <span class="skill-badge">Java</span>
+        <span class="skill-badge">HTML</span>
+        <span class="skill-badge">CSS</span>
+        <span class="skill-badge">JavaScript</span>
         <span class="skill-badge">Java</span>
         <span class="skill-badge">Python</span>
         <span class="skill-badge">Matlab</span>
       </div>
     </section>
 
-    <!-- Skills section -->
-    <section class="skills-section">
-      <h2>Skills</h2>
-      <p>Here are a few of the skills I have:</p>
+    <!-- Front-End section -->
+    <section class="frontEnd-section">
+      <h2>Front-End</h2>
       <div class="skills-list">
-        <span class="skill-badge">Using Generative AI</span>
-        <span class="skill-badge">Web Dev</span>
-        <span class="skill-badge">Java</span>
-        <span class="skill-badge">Python</span>
-        <span class="skill-badge">Matlab</span>
+        <span class="skill-badge">Figma </span>
+        <span class="skill-badge">Bootstrap</span>
+        <span class="skill-badge">React</span>
       </div>
     </section>
   </main>
 
   <!-- Footer section -->
   <footer>
-    <p>&copy; 2025 PayaSpace</p>
+    <p>&copy; 2025 Payaswini Gurung</p>
   </footer>
 </body>
 </html>
