--- a/index.html
+++ b/index.html
@@ -69,8 +69,12 @@
         <span class="skill-badge">Bootstrap</span>
         <span class="skill-badge">React</span>
       </div>
+      <div class="projects-list">
+        <h3> <a href="projectsHome.html">Projects</a></h3>
+      </div>
     </section>
   </main>
+
 
   <!-- Footer section -->
   <footer>
