--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <a href="https://github.com/payaswinigur" target="_blank">
           <i class="fab fa-github" style="font-size: 60px;"></i>
         </a>
+        <!-- email -->
       </div>
     </section>
     </section>
@@ -69,10 +70,27 @@
         <span class="skill-badge">Bootstrap</span>
         <span class="skill-badge">React</span>
       </div>
-      <div class="projects-list">
-        <h3> <a href="projectsHome.html">Projects</a></h3>
-      </div>
     </section>
+    <!-- Projects section -->
+     <!--cards for each project and description of the projects
+     + github link/button--> 
+    <section class="projects-section"> 
+      <h2>Projects</h2>
+      <div class="projects-list">
+        <h3>Projects</h3>
+        <ul>
+            <li>
+                <strong>Personal Website</strong> - A personal website built using HTML, CSS, and JavaScript to showcase my portfolio and skills.
+            </li>
+            <li>
+                <strong>Chat Application</strong> - A real-time chat application developed with Node.js and Socket.io, allowing users to communicate instantly.
+            </li>
+            <li>
+                <strong>Weather App</strong> - A weather forecasting app that fetches data from a public API and displays current weather conditions based on user location.
+            </li>
+          
+        </ul> 
+      </div>
   </main>
 
 
