--- a/index.html
+++ b/index.html
@@ -74,9 +74,10 @@
     <!-- Projects section -->
      <!--cards for each project and description of the projects
      + github link/button--> 
+  <div class="gallery">
     <section class="projects-section"> 
       <h2>Projects</h2>
-      <div class="projects-list">
+      <div class="projects-cards">
         <h3>Projects</h3>
         <ul>
             <li>
@@ -88,9 +89,10 @@
             <li>
                 <strong>Weather App</strong> - A weather forecasting app that fetches data from a public API and displays current weather conditions based on user location.
             </li>
-          
         </ul> 
       </div>
+    </section>
+  </div>  
   </main>
 
 
