--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
 
   <!-- Footer section -->
   <footer>
-    <p>&copy; 2025 Payaswini Gurung</p>
+    <p>&copy; 2026 Payaswini Gurung</p>
   </footer>
+  <script src="js/script.js"></script>
 </body>
 </html>
