--- a/index.html
+++ b/index.html
@@ -66,32 +66,28 @@
     <section class="frontEnd-section">
       <h2>Front-End</h2>
       <div class="skills-list">
-        <span class="skill-badge">Figma </span>
+        <span class="skill-badge">Figma</span>
         <span class="skill-badge">Bootstrap</span>
         <span class="skill-badge">React</span>
       </div>
     </section>
-    <!-- Projects section -->
-     <!--cards for each project and description of the projects
+  <!-- Projects section -->
+  
+  <!--cards for each project and description of the projects
      + github link/button--> 
+  <h3>Projects</h3>
+
   <div class="gallery">
-    <section class="projects-section"> 
       <h2>Projects</h2>
       <div class="projects-cards">
-        <h3>Projects</h3>
-        <ul>
-            <li>
-                <strong>Personal Website</strong> - A personal website built using HTML, CSS, and JavaScript to showcase my portfolio and skills.
-            </li>
-            <li>
-                <strong>Chat Application</strong> - A real-time chat application developed with Node.js and Socket.io, allowing users to communicate instantly.
-            </li>
-            <li>
-                <strong>Weather App</strong> - A weather forecasting app that fetches data from a public API and displays current weather conditions based on user location.
-            </li>
-        </ul> 
-      </div>
-    </section>
+        <!-- Project 1 Card -->
+        <div class="project-card">
+          <img src="img/githubButton.jpg" alt="Project 1 Image" class="project-image">
+          <h3>Project 1 Title</h3>
+          <p>Brief description of Project 1.</p>
+          <a href=">
+            <button class="project-button">View on GitHub</button>
+          </a>
   </div>  
   </main>
 
