--- a/index.html
+++ b/index.html
@@ -87,6 +87,22 @@
           <a href=">
             <button class="project-button">View on GitHub</button>
           </a>
+          <!-- Project 2 Card -->
+        <div class="project-card">
+          <img src="img/githubButton.jpg" alt="Project 2 Image" class="project-image">
+          <h3>Project 2 Title</h3>
+          <p>Brief description of Project 2.</p>
+          <a href=">
+            <button class="project-button">View on GitHub</button>
+          </a>
+          <!-- Project 3 Card -->
+        <div class="project-card">
+          <img src="img/githubButton.jpg" alt="Project 3 Image" class="project-image">
+          <h3>Project 3 Title</h3>
+          <p>Brief description of Project 3.</p>
+          <a href="https://github.com/payaswinigur">
+            <button class="project-button">View on GitHub</button>
+          </a>
   </div>  
   </main>
   <!-- Footer section -->
