--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
           <img src="img/githubButton.jpg" alt="Project 1 Image" class="project-image">
           <h3>Project 1 Title</h3>
           <p>Brief description of Project 1.</p>
-          <a href=">
+          <a href="https://payaswinigur.github.io/09-prj-loreal-routine-builder/
+"></a>">
             <button class="project-button">View on GitHub</button>
           </a>
           <!-- Project 2 Card -->
@@ -92,7 +93,7 @@
           <img src="img/githubButton.jpg" alt="Project 2 Image" class="project-image">
           <h3>Project 2 Title</h3>
           <p>Brief description of Project 2.</p>
-          <a href=">
+          <a href="https://payaswinigur.github.io/09-prj-loreal-routine-builder/">
             <button class="project-button">View on GitHub</button>
           </a>
           <!-- Project 3 Card -->
@@ -100,8 +101,6 @@
           <img src="img/githubButton.jpg" alt="Project 3 Image" class="project-image">
           <h3>Project 3 Title</h3>
           <p>Brief description of Project 3.</p>
-          <a href="https://github.com/payaswinigur">
-            <button class="project-button">View on GitHub</button>
           </a>
   </div>  
   </main>
