--- a/index.html
+++ b/index.html
@@ -74,35 +74,44 @@
   
   <!--cards for each project and description of the projects
      + github link/button--> 
-  <h3>Projects</h3>
+  <section class="projects-section">
+  <h2>Projects</h2>
 
-  <div class="gallery">
-      <h2>Projects</h2>
-      <div class="projects-cards">
-        <!-- Project 1 Card -->
-        <div class="project-card">
-          <img src="img/githubButton.jpg" alt="Project 1 Image" class="project-image">
-          <h3>Project 1 Title</h3>
-          <p>Brief description of Project 1.</p>
-          <a href="https://payaswinigur.github.io/09-prj-loreal-routine-builder/
-"></a>">
-            <button class="project-button">View on GitHub</button>
-          </a>
-          <!-- Project 2 Card -->
-        <div class="project-card">
-          <img src="img/githubButton.jpg" alt="Project 2 Image" class="project-image">
-          <h3>Project 2 Title</h3>
-          <p>Brief description of Project 2.</p>
-          <a href="https://payaswinigur.github.io/09-prj-loreal-routine-builder/">
-            <button class="project-button">View on GitHub</button>
-          </a>
-          <!-- Project 3 Card -->
-        <div class="project-card">
-          <img src="img/githubButton.jpg" alt="Project 3 Image" class="project-image">
-          <h3>Project 3 Title</h3>
-          <p>Brief description of Project 3.</p>
-          </a>
-  </div>  
+  <div class="projects-cards">
+
+    <!-- Project 1 -->
+    <div class="project-card">
+      <img src="img/githubButton.jpg" alt="Project 1 Image" class="project-image">
+      <h3>L’Oréal Routine Builder</h3>
+      <p>A web app that helps users build a personalized skincare routine.</p>
+      <a href="https://payaswinigur.github.io/09-prj-loreal-routine-builder/" target="_blank">
+        <button class="project-button">View Project</button>
+      </a>
+    </div>
+
+    <!-- Project 2 -->
+    <div class="project-card">
+      <img src="img/githubButton.jpg" alt="Project 2 Image" class="project-image">
+      <h3>Project 2 Title</h3>
+      <p>Brief description of Project 2.</p>
+      <a href="https://github.com/payaswinigur" target="_blank">
+        <button class="project-button">View on GitHub</button>
+      </a>
+    </div>
+
+    <!-- Project 3 -->
+    <div class="project-card">
+      <img src="img/githubButton.jpg" alt="Project 3 Image" class="project-image">
+      <h3>Project 3 Title</h3>
+      <p>Brief description of Project 3.</p>
+      <a href="https://github.com/payaswinigur" target="_blank">
+        <button class="project-button">View on GitHub</button>
+      </a>
+    </div>
+
+  </div>
+</section>
+
   </main>
   <!-- Footer section -->
   <footer>
