--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+  <section class="overview">
   <!-- Header section with banner and profile image -->
   <header>
     <img src="img/banner.jpg" alt="Banner Image" class="banner">
@@ -70,6 +71,7 @@
         <span class="skill-badge">React</span>
       </div>
     </section>
+  </section>
   <!-- Projects section -->
   
   <!--cards for each project and description of the projects
@@ -81,7 +83,7 @@
 
     <!-- Project 1 -->
     <div class="project-card">
-      <img src="img/githubButton.jpg" alt="Project 1 Image" class="project-image">
+      <img src="img/LorealProductAdvisor.jpg" alt="Project 1 Image" class="project-image">
       <h3>L’Oréal Routine Builder</h3>
       <p>A web app that helps users build a personalized skincare routine.</p>
       <a href="https://payaswinigur.github.io/09-prj-loreal-routine-builder/" target="_blank">
