--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
 </head>
 
 <body>
-  <section class="overview">
+  
   <!-- Header section with banner and profile image -->
   <header>
-    <img src="img/banner.jpg" alt="Banner Image" class="banner">
+    <img src="img/banner.jpg" alt="Banner Image" class="banner-img">
     <!-- Profile image in a circle -->
+    <h1>Payaswini Gurung</h1>
+    <h2>Undergraduate Student | Aspiring Software Developer</h2>
     <img src="img/profile.jpg" alt="Profile Image" class="profile-img">
-    <h1>Payaswini</h1>
     <p class="subtitle">  </p>
   </header>
 
+  <section class="overview">
   <!-- Main content area -->
   <main>
     <!-- About Me section with image and text side by side -->
@@ -29,24 +31,8 @@
          Hello! My name is Payaswini Gurung. I am an undergraduate student at the Ohio State University studying computer science and engineering. I strive to become a Software Developer primarily in the video game or graphics engineering industry. I also have an interest in Front-End Developmet and UI/UX Design.
         </p>
       </div>
-
-    <section class="contact">
-      <h2>Contact</h2>
-
-      <div class="social-icons">
-        <!-- LinkedIn -->
-        <a href="www.linkedin.com/in/payaswinigurung" target="_blank">
-          <i class="fa-brands fa-linkedin-in" style="font-size: 60px;"></i>
-        </a>
-
-         <!-- Github -->
-        <a href="https://github.com/payaswinigur" target="_blank">
-          <i class="fab fa-github" style="font-size: 60px;"></i>
-        </a>
-        <!-- email -->
-      </div>
     </section>
-    </section>
+
 
     <!-- Skills section -->
     <section class="programmingLanguages-section">
@@ -77,11 +63,12 @@
   <!--cards for each project and description of the projects
      + github link/button--> 
   <section class="projects-section">
-  <h2>Projects</h2>
+    <h2>Projects</h2>
+    <p>Here are some of my recent projects</p>
 
-  <div class="projects-cards">
+    <div class="projects-cards">
 
-    <!-- Project 1 -->
+     <!-- Project 1 -->
     <div class="project-card">
       <img src="img/LorealProductAdvisor.jpg" alt="Project 1 Image" class="project-image">
       <h3>L’Oréal Routine Builder</h3>
@@ -111,6 +98,23 @@
       </a>
     </div>
 
+  </div>
+</section>
+
+<section class="contact">
+  <h2>Contact</h2>
+
+  <div class="social-icons">
+    <!-- LinkedIn -->
+    <a href="www.linkedin.com/in/payaswinigurung">
+      <i class="fa-brands fa-linkedin-in" style="font-size: 60px;"></i>
+    </a>
+
+    <!-- Github -->
+    <a href="https://github.com/payaswinigur" target="_blank">
+      <i class="fab fa-github" style="font-size: 60px;"></i>
+    </a>
+    <!-- email -->
   </div>
 </section>
 
